data/issues_nolabel/nolabel_test_9280.txt
Cannot cross compile tf so to android with ndk-r14b

Some basic infos:

Linux 4.10.10-1-ARCH #1 SMP PREEMPT Wed Apr 12 18:50:28 CEST 2017 x86_64 GNU/Linux
tensorflow-r1.1 source code
bazel 0.4.5
android-ndk-r14b
clang-3.9
gcc 6.3.1
WHEN I cross compile with :"bazel build //tensorflow/contrib/android: libtensorflow_inference.so --crosstool_top=//external:android/crosstool    --host_crosstool_top=@bazel_tools//tools/cpp:toolchain    --cpu=armeabi-v7a --verbose_failures"
I got an issue:
ERROR: /home/mae/tensorflow-r1.1/tensorflow/core/kernels/BUILD:3869:1: C++ compilation of rule '//tensorflow/core/kernels:android_tensorflow_kernels' failed: clang failed: error executing command
(cd /home/mae/.cache/bazel/_bazel_mae/991fa79c990635f28b632a15ab1879cf/execroot/tensorflow-r1.1 && 
  exec env - 
PATH=/usr/local/sbin:/usr/local/bin:/usr/bin:/opt/cuda/bin:/usr/lib/jvm/default/bin:/usr/bin/site_perl:/usr/bin/vendor_perl:/usr/bin/core_perl 
  external/androidndk/ndk/toolchains/llvm/prebuilt/linux-x86_64/bin/clang -gcc-toolchain external/androidndk/ndk/toolchains/arm-linux-androideabi-4.9/prebuilt/linux-x86_64 -fpic -ffunction-sections -funwind-tables -fstack-protector-strong -Wno-invalid-command-line-argument -Wno-unused-command-line-argument -no-canonical-prefixes -fno-integrated-as -target armv7-none-linux-androideabi '-march=armv7-a' '-mfloat-abi=softfp' '-mfpu=vfpv3-d16' -mthumb -Os -g -DNDEBUG -MD -MF bazel-out/arm-linux-androideabi-clang3.8-v7a-gnu-libstdcpp-py3-opt/bin/tensorflow/core/kernels/_objs/android_tensorflow_kernels/tensorflow/core/kernels/meta_support.d '-frandom-seed=bazel-out/arm-linux-androideabi-clang3.8-v7a-gnu-libstdcpp-py3-opt/bin/tensorflow/core/kernels/_objs/android_tensorflow_kernels/tensorflow/core/kernels/meta_support.o' -DEIGEN_MPL2_ONLY -iquote . -iquote bazel-out/arm-linux-androideabi-clang3.8-v7a-gnu-libstdcpp-py3-opt/genfiles -iquote external/protobuf -iquote bazel-out/arm-linux-androideabi-clang3.8-v7a-gnu-libstdcpp-py3-opt/genfiles/external/protobuf -iquote external/bazel_tools -iquote bazel-out/arm-linux-androideabi-clang3.8-v7a-gnu-libstdcpp-py3-opt/genfiles/external/bazel_tools -iquote external/eigen_archive -iquote bazel-out/arm-linux-androideabi-clang3.8-v7a-gnu-libstdcpp-py3-opt/genfiles/external/eigen_archive -iquote external/local_config_sycl -iquote bazel-out/arm-linux-androideabi-clang3.8-v7a-gnu-libstdcpp-py3-opt/genfiles/external/local_config_sycl -iquote external/gemmlowp -iquote bazel-out/arm-linux-androideabi-clang3.8-v7a-gnu-libstdcpp-py3-opt/genfiles/external/gemmlowp -isystem external/protobuf/src -isystem bazel-out/arm-linux-androideabi-clang3.8-v7a-gnu-libstdcpp-py3-opt/genfiles/external/protobuf/src -isystem external/bazel_tools/tools/cpp/gcc3 -isystem external/eigen_archive -isystem bazel-out/arm-linux-androideabi-clang3.8-v7a-gnu-libstdcpp-py3-opt/genfiles/external/eigen_archive -DEIGEN_AVOID_STL_ARRAY -Iexternal/gemmlowp -Wno-sign-compare -fno-exceptions '-mfpu=neon' '-std=c++11' -DTF_LEAN_BINARY -O2 '--sysroot=external/androidndk/ndk/platforms/android-16/arch-arm' -isystem external/androidndk/ndk/sources/cxx-stl/gnu-libstdc++/4.9/include -isystem external/androidndk/ndk/sources/cxx-stl/gnu-libstdc++/4.9/libs/armeabi-v7a/include -isystem external/androidndk/ndk/sources/cxx-stl/gnu-libstdc++/4.9/include/backward -c tensorflow/core/kernels/meta_support.cc -o bazel-out/arm-linux-androideabi-clang3.8-v7a-gnu-libstdcpp-py3-opt/bin/tensorflow/core/kernels/_objs/android_tensorflow_kernels/tensorflow/core/kernels/meta_support.o): com.google.devtools.build.lib.shell.BadExitStatusException: Process exited with status 1.
In file included from tensorflow/core/kernels/meta_support.cc:18:
In file included from ./tensorflow/core/kernels/meta_support.h:23:
In file included from external/gemmlowp/meta/transform_kernels.h:239:
external/gemmlowp/meta/transform_kernels_arm_32.h:7925:7: error: inline assembly requires more registers than available
"ldr r0, %[input_range_min]\n"
^
external/gemmlowp/meta/transform_kernels_arm_32.h:5506:7: error: inline assembly requires more registers than available
"ldr r0, %[input_range_min]\n"
^
2 errors generated.
Target //tensorflow/contrib/android: libtensorflow_inference.so failed to build

Tensorflow works well on my PC ,but I need to port my codes to android proj.
Anyone help ? Thanks a lot.